# static/swagger.json
@@ -107,6 +107,14 @@
             "type": "string"
           }
         }
+      },
+      "stockDetailsRequest": {
+        "type": "object",
+        "properties": {
+          "item": {
+            "type": "string"
+          }
+        }
       }
     }
   },
@@ -540,6 +548,72 @@
             "description": "NOT FOUND",
             "schema": {
               "$ref": "#/components/schemas/seasonilityResponse"
+            }
+          }
+        }
+      }
+    },
+    "/stockDetails": {
+      "post": {
+        "tags": [
+          "Stock details API"
+        ],
+        "summary": "Add todo",
+        "requestBody": {
+          "description": "Stock details API",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/stockDetailsRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/components/schemas/salesInsightsResponse"
+            }
+          },
+          "404": {
+            "description": "NOT FOUND",
+            "schema": {
+              "$ref": "#/components/schemas/salesInsightsResponse"
+            }
+          }
+        }
+      }
+    },
+    "/bomDetails": {
+      "post": {
+        "tags": [
+          "BOM details API"
+        ],
+        "summary": "Add todo",
+        "requestBody": {
+          "description": "BOM details API",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/stockDetailsRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/components/schemas/salesInsightsResponse"
+            }
+          },
+          "404": {
+            "description": "NOT FOUND",
+            "schema": {
+              "$ref": "#/components/schemas/salesInsightsResponse"
             }
           }
         }
